Updated Colors for raaghu Pallet (Purple)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,26 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #AC31E1;
+  --ifm-color-primary-dark: #9C2AD3; /* Darken by 10% */
+  --ifm-color-primary-darker: #8B24C4; /* Darken by 20% */
+  --ifm-color-primary-darkest: #7A1DB6; /* Darken by 30% */
+  --ifm-color-primary-light: #BD3BEF; /* Lighten by 10% */
+  --ifm-color-primary-lighter: #CE44FF; /* Lighten by 20% */
+  --ifm-color-primary-lightest: #DF4EFF; /* Lighten by 30% */
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
-/* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #AC31E1;
+  --ifm-color-primary-dark: #9C2AD3; /* Darken by 10% */
+  --ifm-color-primary-darker: #8B24C4; /* Darken by 20% */
+  --ifm-color-primary-darkest: #7A1DB6; /* Darken by 30% */
+  --ifm-color-primary-light: #BD3BEF; /* Lighten by 10% */
+  --ifm-color-primary-lighter: #CE44FF; /* Lighten by 20% */
+  --ifm-color-primary-lightest: #DF4EFF; /* Lighten by 30% */
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
