--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,8 +5,8 @@
  */
 
 /* You can override the default Infima variables here. */
-
-@import '~bootstrap/dist/css/bootstrap.min.css';
+/* 
+@import '~bootstrap/dist/css/bootstrap.min.css'; */
 
 :root {
   --ifm-color-primary: #AC31E1;
