Updated the Progress Bar and Text correction in CLI MD Files

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -651,3 +651,9 @@ html[data-theme="dark"] .navbar__toggle svg{
   color: #fff;
 }
 
+.dsla-search-wrapper{
+  width: 150% !important;
+}
+.aa-DetachedSearchButton{
+  width: 150%;
+}
